src/test/ui/error-codes/E0004.stderr
error[E0004]: non-exhaustive patterns: `HastaLaVistaBaby` not covered
  --> $DIR/E0004.rs:9:11
   |
LL | / enum Terminator {
LL | |     HastaLaVistaBaby,
   | |     ---------------- not covered
LL | |     TalkToMyHand,
LL | | }
   | |_- `Terminator` defined here
...
LL |       match x {
   |             ^ pattern `HastaLaVistaBaby` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
